# log_analyzer

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sample_config.json
.github/workflows/: ci.yml
app/: log_parser.py  log_processing.py  log_utils.py  main.py  report.py  settings.py  setup_logs.py  utils.py
log_analyzer/: log_parser.py  log_processing.py  log_utils.py  main.py  models.py  report.py  settings.py
tests/: test_find_latest_log.py  test_log_parser.py  test_render_report.py
